trunk/Archive2/8f/5617a54bfbed89/output
main.cpp:5:5: error: redefinition of 'a' with a different type: 'int []' vs 'int *'
int a[]; //error, a has been already declared as a pointer
    ^
main.cpp:4:6: note: previous definition is here
int *a;
     ^
main.cpp:5:5: error: definition of variable with array type needs an explicit size or an initializer
int a[]; //error, a has been already declared as a pointer
    ^
2 errors generated.
